--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <footer>
         <section class="go">
             <a target="_blank" href="https://tetr.io">Juega Tetr.io</a>
-            <a target="_blank" href="">Terminos y condiciones</a>
+            <a target="_blank" href="https://gatrhonx.github.io/Tetraedro/">Terminos y condiciones</a>
             <a href="#cabeza">Ir al inicio</a>
             <br>
             <p class="copy">Copyright 2024 ©</p>
